avoid concurrent access when fetching lyrics

BUG: 431422